--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,27 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springdoc</groupId>
+					<artifactId>springdoc-openapi-maven-plugin</artifactId>
+					<version>1.0</version>
+					<configuration>
+						<apiDocsUrl>http://localhost:8998/v3/api-docs</apiDocsUrl>
+						<outputFileName>${project.artifactId}-openapi.json</outputFileName>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 
 </project>
