--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, dev ]
+  pull_request:
+    branches: [ dev, master ]
 
 jobs:
   build:
