--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Checkout badges branch to a badges directory nested inside first checkout
+          uses: actions/checkout@v3
+          with:
+            ref: badges
+            path: badges
+
       - name: Set up the Java JDK
         uses: actions/setup-java@v2
         with:
@@ -26,7 +32,9 @@ jobs:
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
         with:
+          badges-directory: badges
           generate-branches-badge: true
+          generate-summary: true
 
       - name: Log coverage percentage
         run: |
