--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
 
       - name: Checkout badges branch to a badges directory nested inside first checkout
@@ -26,7 +27,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Maven
-        run: mvn -B test
+        run: mvn -B package -Pcoverage
 
       - name: Generate JaCoCo Badge
         id: jacoco
