--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,6 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+
+      - name: JaCoCo Report
+        uses: Madrapps/jacoco-report@v1.3
