--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,13 @@ jobs:
         with:
           java-version: 1.8
       - name: Run Coverage
-        run: mvn --batch-mode --update-snapshots jacoco:report
+        run: mvn verify jacoco:report
 
       - name: Add coverage to PR
         id: jacoco
         uses: madrapps/jacoco-report@v1.3
         with:
-          paths: ${{ github.workspace }}/build/reports/jacoco/jacoco.xml
+          paths: ${{ github.workspace }}/build/target/site/jacoco/jacoco.xml
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 60
           min-coverage-changed-files: 70
